--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -4,4 +4,8 @@
   border-radius: 40px;
   height: 890px;
   width: 1175px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
