--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -5,7 +5,25 @@
   height: 890px;
   width: 1175px;
   display: flex;
-  justify-content: space-around;
+  position: relative;
   align-items: center;
   flex-direction: column;
+  .row1{
+    display: flex;
+    justify-content: flex-end;
+    width: 866px;
+    position: absolute;
+    top: 52px;
+  }
+  .row2{
+    display: flex;
+    width: 866px;
+    justify-content: space-between;
+    position: absolute;
+    top: 156px;
+  }
+  .row3{
+    position: absolute;
+    top: 296px;
+  }
 }
