--- a/src/navigation/Navigation.scss
+++ b/src/navigation/Navigation.scss
@@ -13,6 +13,9 @@
     position: relative;
     height: 100%;
   }
+  .item:last-child{
+    margin-right: 0;
+  }
   .border{
     opacity: 0;
     width: 20px;
