--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -2,7 +2,7 @@
   background: #FFFFFF;
   box-shadow: 30px 30px 70px rgba(143, 165, 185, 0.45), -30px -30px 70px rgba(255, 255, 255, 0.85);
   border-radius: 40px;
-  height: 890px;
+  height: 85vh;
   width: 1175px;
   display: flex;
   position: relative;
@@ -13,17 +13,17 @@
     justify-content: flex-end;
     width: 866px;
     position: absolute;
-    top: 52px;
+    top: 7vh;
   }
   .row2{
     display: flex;
     width: 866px;
     justify-content: space-between;
     position: absolute;
-    top: 156px;
+    top: 15vh;
   }
   .row3{
     position: absolute;
-    top: 296px;
+    top: 25vh;
   }
 }
